syntax = "proto3";
option csharp_namespace = "OzonEdu.StockApi.Grpc";
package StockApi;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service MerchandiseApiGrpc {
  
}

message GetMerchIssuedToEmployeeRequest {
  int32 employee_id = 1;
}

message GetMerchIssuedToEmployeeResponse {
  
}
